# glitch-world-model

./: .aider.conf.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONVENTIONS.md  PLAYBOOK.md  README.md  RULES.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
configs/: lewm_gate6_pilot.yaml  lewm_kaggle_train.yaml  lewm_phase7.yaml
requirements/: kaggle_runtime.txt  lewm-runtime.txt
scripts/: audit_gate6_tempglitch_source.py  build_lewm_lance_dataset.py  build_lewm_split.py  build_tempglitch_lewm_lance.py  build_tempglitch_validation_manifest.py  build_wob_lewm_lance.py  convert_tempglitch_labels.py  create_dynamics_test_dataset.py  create_hard_dynamics_dataset.py  create_test_dataset.py  doctor.py  download_glitchbench_subset.py  download_tempglitch.py  evaluate_tempglitch_locked_test.py  freeze_tempglitch_protocol.py  freeze_wob_protocol.py  ingest_phase6e_kaggle_artifacts.py  inspect_lewm_dataset.py  plot_lewm_surprise_timeline.py  prepare_lewm_gate6_package.py  prepare_lewm_gpu_profile_package.py  prepare_lewm_kaggle_package.py  prepare_lewm_r3_seed_run.py  prepare_phase6e_kaggle_dataset.py  request_lewm_kaggle_approvals.py  run_dynamics_experiments.py  run_gate7_lance_scoring.py  run_gate7_lewm_evaluation.py  run_gate9_ablations.py  run_glitchbench_subset_experiments.py  run_hard_dynamics_experiments.py  run_kaggle_lewm.py  run_lewm_gate6_automation.py  run_lewm_gpu_profile_automation.py  run_lewm_scoring.py  run_phase6e_kaggle_automation.py  run_synthetic_demo.py  run_tempglitch_smoke_test.py  (+12 more)
(+177 files in other folders)
