[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glitch-world-model"
version = "0.1.0"
description = "Baseline pipeline for video game glitch detection research."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
